tests/ui/trait-bounds/super-assoc-mismatch.stderr
error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:12:22
   |
LL | impl BoundOnSelf for () {}
   |                      ^^ the trait `Sub` is not implemented for `()`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required by a bound in `BoundOnSelf`
  --> $DIR/super-assoc-mismatch.rs:11:20
   |
LL | trait BoundOnSelf: Sub {}
   |                    ^^^ required by this bound in `BoundOnSelf`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:16:27
   |
LL | impl BoundOnParam<()> for () {}
   |                           ^^ the trait `Sub` is not implemented for `()`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required by a bound in `BoundOnParam`
  --> $DIR/super-assoc-mismatch.rs:15:23
   |
LL | trait BoundOnParam<T: Sub> {}
   |                       ^^^ required by this bound in `BoundOnParam`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:23:18
   |
LL |     type Assoc = ();
   |                  ^^ the trait `Sub` is not implemented for `()`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required by a bound in `BoundOnAssoc::Assoc`
  --> $DIR/super-assoc-mismatch.rs:20:17
   |
LL |     type Assoc: Sub;
   |                 ^^^ required by this bound in `BoundOnAssoc::Assoc`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:31:21
   |
LL |     type Assoc<T> = ();
   |                     ^^ the trait `Sub` is not implemented for `()`, which is required by `<() as BoundOnGat>::Assoc<u8>: Sub`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required by a bound in `BoundOnGat`
  --> $DIR/super-assoc-mismatch.rs:27:41
   |
LL | trait BoundOnGat where Self::Assoc<u8>: Sub {
   |                                         ^^^ required by this bound in `BoundOnGat`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:35:26
   |
LL | fn trivial_bound() where (): Sub {}
   |                          ^^^^^^^ the trait `Sub` is not implemented for `()`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
   = help: see issue #48214
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:46:22
   |
LL | impl BoundOnSelf for Wrapper<()> {}
   |                      ^^^^^^^^^^^ the trait `Sub` is not implemented for `()`, which is required by `Wrapper<()>: Sub`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required for `Wrapper<()>` to implement `Sub`
  --> $DIR/super-assoc-mismatch.rs:44:14
   |
LL | impl<T: Sub> Sub for Wrapper<T> {}
   |         ---  ^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `BoundOnSelf`
  --> $DIR/super-assoc-mismatch.rs:11:20
   |
LL | trait BoundOnSelf: Sub {}
   |                    ^^^ required by this bound in `BoundOnSelf`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:49:36
   |
LL | impl BoundOnParam<Wrapper<()>> for Wrapper<()> {}
   |                                    ^^^^^^^^^^^ the trait `Sub` is not implemented for `()`, which is required by `Wrapper<()>: Sub`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required for `Wrapper<()>` to implement `Sub`
  --> $DIR/super-assoc-mismatch.rs:44:14
   |
LL | impl<T: Sub> Sub for Wrapper<T> {}
   |         ---  ^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `BoundOnParam`
  --> $DIR/super-assoc-mismatch.rs:15:23
   |
LL | trait BoundOnParam<T: Sub> {}
   |                       ^^^ required by this bound in `BoundOnParam`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:53:18
   |
LL |     type Assoc = Wrapper<()>;
   |                  ^^^^^^^^^^^ the trait `Sub` is not implemented for `()`, which is required by `Wrapper<()>: Sub`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required for `Wrapper<()>` to implement `Sub`
  --> $DIR/super-assoc-mismatch.rs:44:14
   |
LL | impl<T: Sub> Sub for Wrapper<T> {}
   |         ---  ^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `BoundOnAssoc::Assoc`
  --> $DIR/super-assoc-mismatch.rs:20:17
   |
LL |     type Assoc: Sub;
   |                 ^^^ required by this bound in `BoundOnAssoc::Assoc`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:58:21
   |
LL |     type Assoc<T> = Wrapper<()>;
   |                     ^^^^^^^^^^^ the trait `Sub` is not implemented for `()`, which is required by `<Wrapper<()> as BoundOnGat>::Assoc<u8>: Sub`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required for `Wrapper<()>` to implement `Sub`
  --> $DIR/super-assoc-mismatch.rs:44:14
   |
LL | impl<T: Sub> Sub for Wrapper<T> {}
   |         ---  ^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `BoundOnGat`
  --> $DIR/super-assoc-mismatch.rs:27:41
   |
LL | trait BoundOnGat where Self::Assoc<u8>: Sub {
   |                                         ^^^ required by this bound in `BoundOnGat`

error[E0277]: the trait bound `(): Sub` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:62:34
   |
LL | fn trivial_bound_wrapper() where Wrapper<()>: Sub {}
   |                                  ^^^^^^^^^^^^^^^^ the trait `Sub` is not implemented for `()`, which is required by `Wrapper<()>: Sub`
   |
   = help: the trait `Sub` is implemented for `Wrapper<T>`
note: required for `Wrapper<()>` to implement `Sub`
  --> $DIR/super-assoc-mismatch.rs:44:14
   |
LL | impl<T: Sub> Sub for Wrapper<T> {}
   |         ---  ^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
   = help: see issue #48214
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `(): SubGeneric<u16>` is not satisfied
  --> $DIR/super-assoc-mismatch.rs:84:22
   |
LL |     type Assoc1<T> = ();
   |                      ^^ the trait `SubGeneric<u16>` is not implemented for `()`, which is required by `<u8 as MultiAssoc>::Assoc1<()>: SubGeneric<<u8 as MultiAssoc>::Assoc2>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/super-assoc-mismatch.rs:72:1
   |
LL | trait SubGeneric<T>: SuperGeneric<T, Assoc = T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `MultiAssoc`
  --> $DIR/super-assoc-mismatch.rs:75:23
   |
LL | trait MultiAssoc
   |       ---------- required by a bound in this trait
LL | where
LL |     Self::Assoc1<()>: SubGeneric<Self::Assoc2>
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MultiAssoc`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0277`.
